Fix card height isn't align

--- a/static/css/mine.css
+++ b/static/css/mine.css
@@ -40,6 +40,7 @@ img {
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
+    align-items: flex-start;
 }
 
 .project {
